--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,5 @@
-
 server.port=8887
+
+github.client.id=Iv1.6525d5de46b824ef
+github.client.secret=7ac19ed3503cf1b10ceb2013f8ae7880d8120b10
+github.redirect.uri=http://localhost:8887/callback
